# test_rag

./: .env.example  .gitignore  .~lock.cv.docx#  Dockerfile  README.md  chunker.py  compose.yml  db_manager.py  docx_parser.py  inno_parser.py  parser.py  playground.py  pyproject.toml  qdrant_config.yaml  search_test.py  test.py
app/: chunker.py  db_manager.py  main.py
app/chunker/: chunker.py
app/parsers/: __init__.py  base_parser.py  collection.py  inno_parser.py  models.py  project_parser.py  text_normalizer.py
app/tests/: __init__.py  chunking_test_settings.json  db_test.py  init_test_storage.py  parser_test.py  personal_data_search_settings.json  personal_info_parser_test.py  personal_info_search_test.py  pipeline_test.py  project_data_search_settings.json  retreiver_pipeline_test.py  search_test.py  test_queries.json
app/vector_db/: __init__.py  chroma.py  factory.py  manager.py  qdrant.py
